[package]
name = "cargo-powdr"
description = "CLI to create, manage and run powdrVM projects"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "^4.3", features = ["derive"] }

[[bin]]
name = "cargo-powdr"
path = "src/main.rs"
