[package]
name = "cli-openvm"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "powdr_openvm"
path = "src/main.rs"
bench = false         # See https://github.com/bheisler/criterion.rs/issues/458

[dependencies]
openvm-sdk.workspace = true
openvm-stark-sdk.workspace = true
openvm-stark-backend.workspace = true

powdr-openvm.workspace = true

eyre = "0.6.12"

clap = { version = "^4.3", features = ["derive"] }

serde_cbor = "0.11.2"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = "0.1"
metrics = "0.23.0"
metrics-tracing-context = "0.16.0"
metrics-util = "0.17.0"
serde_json = "1.0.117"

[lints]
workspace = true
