[package]
name = "powdr-rs-cli"
description = "CLI to compile Rust programs to powdr-asm"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[features]
default = ["plonky3"]
halo2 = ["powdr/halo2"]
plonky3 = ["powdr/plonky3"]
estark-starky = ["powdr/estark-starky"]
estark-polygon = ["powdr/estark-polygon"]
stwo = ["powdr/stwo"]

[dependencies]
powdr.workspace = true
powdr-analysis.workspace = true
itertools = "0.13"

clap = { version = "^4.3", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
strum = { version = "0.24.1", features = ["derive"] }
clap-markdown = "0.1.3"

[[bin]]
name = "powdr-rs"
path = "src/main.rs"
bench = false        # See https://github.com/bheisler/criterion.rs/issues/458
