[package]
name = "powdr-cli"
description = "powdr CLI to compile powdr-asm and powdr-pil programs"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
default-run = "powdr"

[features]
default = ["plonky3"]
plonky3 = ["powdr/plonky3"]
stwo = ["powdr/stwo"]

plonky3-simd = ["powdr/plonky3-simd"]

[dependencies]
powdr.workspace = true

clap = { version = "^4.3", features = ["derive"] }
env_logger = "0.10.0"
itertools = "0.13"
log = "0.4.27"
strum = { version = "0.24.1", features = ["derive"] }
clap-markdown = "0.1.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }

[dev-dependencies]
powdr = { workspace = true }

tempfile = "3.6"

test-log = "0.2.12"
env_logger = "0.10.0"

[[bin]]
name = "powdr"
path = "src/main.rs"
bench = false        # See https://github.com/bheisler/criterion.rs/issues/458

[lints.clippy]
uninlined_format_args = "deny"
