[package]
name = "powdr-constraint-solver"
description = "powdr tools to analyze and solve algebraic constraints"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
powdr-number.workspace = true

itertools.workspace = true
num-traits.workspace = true
derive_more.workspace = true
auto_enums = "0.8.5"
log.workspace = true
bitvec = "1.0.1"
serde.workspace = true

crepe = { git = "https://github.com/powdr-labs/crepe", rev = "powdr-0.1.11" }
derivative.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
env_logger.workspace = true
test-log.workspace = true
expect-test = "1.5.1"
serde_json = "1.0.140"

[package.metadata.cargo-udeps.ignore]
development = ["env_logger"]

[lints]
workspace = true

[lib]
bench = false # See https://github.com/bheisler/criterion.rs/issues/458
