[package]
name = "estark"
version = "0.1.0"
edition = "2021"

[dependencies]
ast = { version = "0.1.0", path = "../ast" }
log = "0.4.17"
number = { path = "../number" }
serde_json = "1.0"
starky = { git = "https://github.com/0xEigenLabs/eigen-zkvm.git", branch = "main" }

[dev-dependencies]
env_logger = "0.10.0"
mktemp = "0.5.0"
pil_analyzer = { path = "../pil_analyzer" }
test-log = "0.2.12"
