[package]
name = "powdr-executor-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
powdr-number.workspace = true
powdr-ast.workspace = true

serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
itertools = "0.13"

[lib]
bench = false # See https://github.com/bheisler/criterion.rs/issues/458