[package]
name = "powdr-executor"
description = "powdr executor for powdr-PIL code, also known as 'witness generator' or 'witgen'"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
powdr-ast = { path = "../ast" }
powdr-number = { path = "../number" }
powdr-parser-util = { path = "../parser-util" }
powdr-pil-analyzer = { path = "../pil-analyzer" }

itertools = "^0.10"
log = { version = "0.4.17" }
rayon = "1.7.0"
bit-vec = "0.6.3"
num-traits = "0.2.15"
lazy_static = "1.4.0"
indicatif = "0.17.7"

[dev-dependencies]
test-log = "0.2.12"
env_logger = "0.10.0"
pretty_assertions = "1.3.0"

[package.metadata.cargo-udeps.ignore]
development = ["env_logger"]
