[package]
name = "powdr-executor"
description = "powdr executor for powdr-PIL code, also known as 'witness generator' or 'witgen'"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
powdr-ast.workspace = true
powdr-executor-utils.workspace = true
powdr-number.workspace = true
powdr-parser-util.workspace = true
powdr-pil-analyzer.workspace = true
powdr-jit-compiler.workspace = true

auto_enums = "0.8.5"
itertools = "0.13"
libloading = "0.8"
log = "0.4.27"
rayon = "1.7.0"
bit-vec = "0.6.3"
num-traits = "0.2.15"
derive_more = "0.99.17"
lazy_static = "1.4.0"
indicatif = "0.17.7"
serde = { version = "1.0", default-features = false, features = [
    "alloc",
    "derive",
    "rc",
] }

[dev-dependencies]
test-log = "0.2.12"
env_logger = "0.10.0"
pretty_assertions = "1.4.0"

[package.metadata.cargo-udeps.ignore]
development = ["env_logger"]

[lints]
workspace = true

[lib]
bench = false # See https://github.com/bheisler/criterion.rs/issues/458
