[package]
name = "powdr-expression"
description = "powdr expression type"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
powdr-number.workspace = true

itertools.workspace = true
num-traits.workspace = true
derive_more.workspace = true
serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
schemars = { version = "0.8.16", features = ["preserve_order"]}

[dev-dependencies]
test-log.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true

[lib]
bench = false # See https://github.com/bheisler/criterion.rs/issues/458
