[package]
name = "powdr-halo2"
description = "powdr Halo2 integration"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
powdr-ast = { path = "../ast" }
powdr-number = { path = "../number" }
powdr-pil-analyzer = { path = "../pil-analyzer" }

polyexen = { git = "https://github.com/Dhole/polyexen", branch = "feature/shuffles" }
halo2_proofs = "0.2"
halo2_curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.3.2", package = "halo2curves" }
snark-verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier" }
num-traits = "0.2.15"
num-integer = "0.1.45"
itertools = "^0.10"
num-bigint = "^0.4"
log = "0.4.17"
rand = "0.8.5"

[dev-dependencies]
powdr-airgen = { path = "../airgen" }
powdr-analysis = { path = "../analysis" }
powdr-executor = { path = "../executor" }
powdr-importer = { path = "../importer" }
powdr-linker = { path = "../linker" }
powdr-parser = { path = "../parser" }
powdr-pipeline = { path = "../pipeline" }

test-log = "0.2.12"
env_logger = "0.10.0"
