[package]
name = "importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { version = "0.1.0", path = "../ast" }
number = { version = "0.1.0", path = "../number" }
pretty_assertions = "1.4.0"
parser = { path = "../parser" }
