[package]
name = "powdr-importer"
description = "powdr module import system"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
powdr-ast.workspace = true
powdr-number.workspace = true
powdr-parser.workspace = true
powdr-parser-util.workspace = true

pretty_assertions = "1.4.0"

[lints.clippy]
uninlined_format_args = "deny"
