[package]
name = "powdr-jit-compiler"
description = "powdr just-in-time compiler"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
powdr-ast.workspace = true
powdr-number.workspace = true
powdr-parser.workspace = true

log = "0.4.27"
mktemp = "0.5.0"
itertools = "0.13"
libloading = "0.8"
lazy_static = "1.4.0"

[dev-dependencies]
powdr-pil-analyzer.workspace = true
pretty_assertions = "1.4.0"
test-log = "0.2.12"

[lints]
workspace = true

[lib]
bench = false # See https://github.com/bheisler/criterion.rs/issues/458
