[package]
name = "powdr-linker"
description = "powdr submachine linking system"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
powdr-analysis = { path = "../analysis" }
powdr-ast = { path = "../ast" }
powdr-number = { path = "../number" }

pretty_assertions = "1.4.0"
itertools = "^0.10"

[dev-dependencies]
powdr-airgen = { path = "../airgen" }
powdr-importer = { path = "../importer" }
powdr-parser = { path = "../parser" }

[lints.clippy]
uninlined_format_args = "deny"
