[package]
name = "powdr-linker"
description = "powdr submachine linking system"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
powdr-analysis.workspace = true
powdr-ast.workspace = true
powdr-number.workspace = true
powdr-parser-util.workspace = true

pretty_assertions = "1.4.0"
itertools = "^0.10"

[dev-dependencies]
powdr-airgen.workspace = true
powdr-importer.workspace = true
powdr-parser.workspace = true

[lints.clippy]
uninlined_format_args = "deny"
