[package]
name = "powdr-linker"
description = "powdr submachine linking system"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
powdr-analysis.workspace = true
powdr-ast.workspace = true
powdr-number.workspace = true
powdr-parser-util.workspace = true
strum = { version = "0.24.1", features = ["derive"] }

pretty_assertions = "1.4.0"
itertools = "0.13"
lazy_static = "1.4.0"
log = "0.4.22"
sha2 = { version = "0.10.8", default-features = false }
ibig = { version = "0.3.6", default-features = false }

[dev-dependencies]
powdr-airgen.workspace = true
powdr-importer.workspace = true
powdr-parser.workspace = true

[lints]
workspace = true

[lib]
bench = false # See https://github.com/bheisler/criterion.rs/issues/458
